--- a/server/api/phone/models/phone.settings.json
+++ b/server/api/phone/models/phone.settings.json
@@ -1,35 +1,37 @@
 {
   "kind": "collectionType",
-  "collectionName": "brands",
+  "collectionName": "phones",
   "info": {
-    "name": "Brand"
+    "name": "phone"
   },
   "options": {
     "increments": true,
     "timestamps": true
   },
   "attributes": {
-    "name": {
-      "type": "string",
-      "required": true
+    "model": {
+      "type": "string"
     },
     "description": {
       "type": "text"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
-        "files",
         "images",
+        "files",
         "videos"
       ],
       "plugin": "upload",
       "required": false
     },
-    "phones": {
-      "via": "brand",
-      "collection": "phone"
+    "price": {
+      "type": "decimal"
+    },
+    "brand": {
+      "model": "brand",
+      "via": "phones"
     }
   }
 }
